--- a/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
+++ b/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
@@ -5112,6 +5112,11 @@
       <version>1.9.23.ibm</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-weaver-privilizer</artifactId>
+      <version>1.1.0.ibm</version>
+    </dependency>
+    <dependency>
       <groupId>org.glassfish</groupId>
       <artifactId>jakarta.json</artifactId>
       <version>2.0.2.ibm</version>
@@ -5445,11 +5450,6 @@
       <groupId>org.apache.aries</groupId>
       <artifactId>org.apache.aries.util</artifactId>
       <version>1.1.3</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-weaver-privilizer</artifactId>
-      <version>1.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
